--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "reset-css": "^5.0.1",
     "vue": "^3.0.0-0",
+    "vue-icon": "^2.1.2",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
