--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,14 +7,24 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
 
-      - name: Install and Build 🔧
+      - name: Install
         run: |
           npm install
+          npm run build
+          
+      - name: Add .env
+        run: |
+          touch .env
+          echo NODE_ENV=production
+          echo VUE_APP_IQAIR_API_KEY={{secrets.API_KEY}}
+      
+      - name: Build
+        run: | 
           npm run build
 
       - name: Deploy 🚀
